--- a/src/App.css
+++ b/src/App.css
@@ -1,111 +1,3 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
-.nav_list {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.item {
-  list-style: none;
-}
-
-.item:hover {
-  cursor: pointer;
-  transform: scale(1.2);
-  transition: 0.5s;
-}
-
-.about {
-  margin-top: 70px;
-}
-
-.about-paraghraph {
-  font-size: 14px;
-  width: 50%;
-  text-align: center;
-  margin: auto;
-}
-
-.menu-text {
-    font-family: "Azeret Mono", sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    color: #6F6F64;
-}
-
-.menu-paraghraph {
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  font-size: 19px;
-  line-height: 21px;
-  color: #6F6F64;
-  width: 70%;
-  text-align: start;
-
-}
-
-.menu-button {
-    height: 58px;
-    width: 200px;
-    border: 2px solid #6F6F64;
-    background: #6F6F64;
-    color: white;
-}
 
 
-.menu-button:hover {
-  cursor: pointer;
-  background-color: #53534c;
-  border: 2px solid #53534c;
-}
-
-
-.menu-info {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 45px;
-  margin-top: 60px;
-  background-color: rgb(241, 241, 222);
-  
-}
-
-.menuTt {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-
-.btn {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.timeTable {
-  background-color: #AA9E54;
-  color: white;
-  padding: 50px 15px 50px 15px;
-}
-
-.timetable-container {
-  display: flex;
-  justify-content: space-around;
-}
-
-.location {
-  font-size: 20px;
-}
-
-.hours {
-  font-size: 20px;
-}
-
-.relax {
-  font-size: 20px;
-}
+/*# sourceMappingURL=App.css.map */
